--- a/css/styles.css
+++ b/css/styles.css
@@ -1,1 +1,300 @@
 /*Sheet styles*/
+/*CSS3 hoja de estilos*/
+
+/*Colores*/
+/*-------------------------*/
+/*
+
+verde: #8DC63F;
+azul: #27ade1;
+rojo: #BE1E2D;
+amrillo fuerte: #F37100;
+amarillo: #F3C923;
+rosa: #EC008C;
+naranja: #F15A29;
+negro: #231f20;
+fondo nav: #343A40;
+Amarillo PRD: #FFCB00;
+
+*/
+/*-------------------------*/
+
+/*### Resetear hoajs estilo#################################*/
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p,
+blockquote, pre, a, abbr, acronym, address, big,
+cite, code, del, dfn, em, font, img,
+ins, kbd, q, s, samp, small, strike,
+strong, sub, sup, tt, var, dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+center, u, b, i {
+     margin: 0;
+     padding: 0;
+     border: 0;
+     font-weight: normal;
+     font-style: normal;
+     font-size: 100&#37;;
+     font-family: inherit;
+     vertical-align: baseline
+}
+
+
+body {
+     line-height: 1
+}
+ 
+:focus {
+     outline: 0
+}
+ 
+ol, ul {
+     list-style: none
+}
+ 
+table {
+     border-collapse: collapse;
+     border-spacing: 0
+}
+ 
+blockquote:before, blockquote:after, q:before, q:after {
+     content: ""
+}
+ 
+blockquote, q {
+     quotes: "" ""
+}
+ 
+input, textarea {
+     margin: 0;
+     padding: 0
+}
+ 
+hr {
+     margin: 0;
+     padding: 0;
+     border: 0;
+     color: #000;
+     background-color: #000;
+     height: 1px
+}
+
+/*##########################################################*/
+
+*
+{
+     font-family: 'Niramit', sans-serif;
+     margin: 0;
+}
+
+
+a img:hover {
+    opacity: 0.8;
+    filter: alpha(opacity=80);
+    box-shadow: #000 0 0 0;
+}
+
+body
+{
+     background: #FEFEFE;
+     /*font-family: verdana;*/
+     font-size: 16px;
+     line-height: 1.5em;
+}
+
+.header 
+{
+     background: none;
+     margin: 0em 0 0 0;
+     padding: 0.3em 0em;
+}
+
+.footer
+{
+     background-color: #343A40;
+     color: #EFEFEF;
+     font-size: 0.9em;
+     margin: 0em;
+     padding: 2em;
+}
+
+p {
+     margin: 1em 0em;
+     padding: 0.3em;
+}
+
+h1 {
+     font-size: 1.8em;
+     font-weight: bold;
+}
+
+h2 {
+     font-size: 1.6em;
+     font-weight: bold;   
+}
+
+h3 {
+     font-size: 1.4em;
+     font-weight: bold;     
+}
+
+h4 {
+     font-size: 1.3em;
+     font-weight: bold;    
+}
+
+h5 {
+     font-size: 1.1em;
+     font-weight: bold;    
+}
+
+
+
+.btn-warning{
+      background-color: #ef8300;
+}
+
+.btn-warning:hover {
+    color: #FFF;
+    background-color: #212529;
+    border-color: #212529;
+}
+
+.btn-link {
+    color: #FF7100;
+    background-color: transparent;
+    border-color: transparent;
+}
+
+.btn-link:hover {
+    color: #555;
+    text-decoration: underline;
+    background-color: transparent;
+    border-color: transparent;
+}
+
+.espacio{
+     margin-top: 60px;
+}
+
+.linkNaranja
+{
+     color: #FF7100;
+     text-decoration: none;
+}
+
+.linkNaranja:hover
+{
+     color: #555;
+     text-decoration: underline;
+}
+
+
+
+
+
+#logo-nav {
+     background: none;
+     border: 0;
+     color: none;
+     height: 1.5em;
+     margin: 0em 0 0 0em;     
+     text-align: center;
+     vertical-align: middle;
+     width: 6.5em;
+}
+
+#logo-nav img {
+     height: auto;
+     width: 100%;
+}
+
+.main {
+     margin: 1em 0 1em 0;
+     padding: 0em 0em;
+}
+
+.telefono
+{
+     color: #FFCB00;
+}
+
+.telefono:hover
+{
+     color: #FFCB00;
+     text-decoration: underline;
+}
+
+.linkNegro
+{
+     color: #333;
+}
+
+.linkNegro:hover
+{
+     color: #333;
+     text-decoration: underline;
+}
+
+
+.titulo
+{
+     border-bottom: 1px solid #F3C923;
+     color: #444;
+     font-family: verdana;
+     line-height: 1.5em;
+     margin: 0 0 0.5em 0;
+}
+
+.titulo2
+{
+     color: #555;
+     font-family: verdana;
+     text-align: left;
+}
+
+.titulo3
+{
+     background-color: rgb(60,60,60); opacity: 0.8;
+     color: #FEFEFE;
+     font-family: verdana;
+     line-height: 1em;
+}
+
+.footDR
+{
+     font-size: 0.8em;
+}
+
+.fecha
+{
+     color: #2E9AFE;
+     font-size: 0.8em;
+     font-weight: bolder;
+     line-height: 1em;
+     text-align: right;
+}
+
+.imgcien
+{
+     height: auto;
+     width: 100%;
+}
+
+.negrita
+{
+     font-weight: bold;
+}
+
+.nota
+{
+     font-size: .85em;
+     font-style: italic;
+}
+
+.margen
+{
+     background: none;
+     padding: 0 0 1em 0;
+}
