se corrigio error en GetSchools y se agrego * a campos obligatorios en utiles.php

--- a/css/styles.css
+++ b/css/styles.css
@@ -298,3 +298,11 @@ h5 {
      background: none;
      padding: 0 0 1em 0;
 }
+
+.campoObligatorio
+{
+     font-size: 0.8em;
+     font-weight: bolder;
+     color: #ff0000;
+     padding: 1em;
+}
